# samsung-volume-control

./: DISCOVERY.md  OLD_DOCS.md  devbox.json  hacs.json  pyproject.toml  pytest.ini  requirements.txt
custom_components/: __init__.py
custom_components/samsung_tv_volume/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  media_player.py  upnp_device.py
custom_components/samsung_tv_volume/translations/: en.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_init.py  test_media_player.py  test_upnp_device.py
